@@ -10,6 +10,8 @@ Changes in 0.80.2:
       for a package.
     * Fix bug in pinTroves config item behavior - now consistently pins 
       all troves that match a pinTrove line
+    * When a trove is left of the system because of dependency resolution,
+      a warning is logged
   o Build Changes:
     * It is now possible for a recipe to request that specific individual
       requirements be removed from files (it used to be all or nothing)
